app/assets/stylesheets/revised/pages/landing/_signup.scss
// This was originally specific to the org signup pages - now it includes ambassadors.
// The ambassador specific styles are in a separate file though
.landing-page-body,
#welcome_index {
  padding-top: 0;

  .primary-footer {
    margin-top: 0;
  }
  // This is our minimal spam block thing
  .form-group.additional-field {
    display: none !important;
  }
}

$landing-page-targets: "shop", "school", "community_groups", "law_enforcement",
  "cities", "ambassadors-how-to", "ambassadors-current", "campus-packages",
  "shop-packages", "cities-packages";

@each $target in $landing-page-targets {
  .signup-landing-page-#{$target} {
    .banner-header {
      background-image: image-url("landing_pages/header_bg_#{$target}.jpg");
    }
  }
}

// Including root-landing-page because required for footer, also ambassadors
.signup-landing-page,
.root-landing-page {
  svg {
    // SVG icon colors. Manually added to svgs, replacing .cls- classes
    .svgicon-border {
      fill: #3498db;
    }

    .svgicon-bg {
      fill: #34495e;
    }

    .svgicon-body {
      fill: #fff;
    }

  }
}

.signup-landing-page {
  padding-bottom: 40px;

  .trusted-by {
    padding: 10px;

    .header {
      background-color: transparent;
      text-align: center;
      font-weight: 600;
      font-size: 14px;
      margin: 0;
      padding: 0;
    }

    img {
      display: block;
      width: 100%;
      height: auto;
      padding-right: 15px;
    }
  }
}

.signup-landing-page {
  .banner-header {
    padding-top: 100px !important;
    padding-bottom: 100px !important;
    margin-top: 100px;
    background-size: auto 100%;
    background-position: right center;
    background-repeat: no-repeat;
    border-bottom: 3px solid black;
    background-size: cover;

    // For extra wide screens, make sure we cover the whole screen
    @include media-breakpoint-up(lg) {
      background-size: cover;
    }

    .icon-wrapper {
      width: 100%;
      margin: 0;
      clear: both;

      svg,
      img {
        width: 25%;
        display: block;
        margin: 0 auto;
      }
    }

    .banner-text {
      @include make-col-ready;

      @include make-col(12);

      margin-top: 2 * $vertical-height;
    }

    h1,
    h2,
    h3 {
      color: white;
      text-align: center;
      margin: 0;
    }

    h1 {
      font-size: 36px;
      line-height: 1.4em;
      text-shadow: 2px 1px 20px $gray-darker;
    }

    h2,
    h3 {
      font-family: $body-font-family;
      font-weight: $normal-font-weight;
      text-transform: none;
      font-style: normal;
      font-size: 15px;
      font-weight: 600;
      line-height: 24px;
    }

    @include media-breakpoint-up(md) {
      padding-top: 17 * $vertical-height;
      padding-bottom: 0;

      .icon-wrapper {
        // There is a 1/6 overhang to the left (8.33333/6 ~ 1.33333)
        flex: 0 0 9.66666%;
        max-width: 9.66666%;
        margin-left: -1.3333%;

        svg,
        img {
          width: 100%;
        }
      }

      .banner-text {
        @include make-col(7);

        margin-top: 0;
      }

      h1,
      h2,
      h3 {
        text-align: left;
      }

      .ribbon {
        display: block;
        margin-top: 7 * $vertical-height;
        background: $gray-darker;

        h2 {
          font-size: 24px;
          margin: 0;
          padding: (2 * $vertical-height) 0;
        }
      }
    }
  }
}

.signup-landing-page {
  .main-body-row {
    @include media-breakpoint-down(md) {
      flex-direction: column-reverse;
    }
  }

  .landing-why-col,
  .next-steps-col {
    @include make-col-ready;
  }

  .landing-why-col {
    margin-top: 2 * $vertical-height;

    @include make-col(8);

    @include media-breakpoint-down(md) {
      @include make-col(12);

      min-height: auto;
    }

    @include media-breakpoint-up(lg) {
      @include make-col(7);
    }

    h3 {
      margin-top: 20px;
      text-transform: none;
      font-size: 24px;
      font-weight: 500;
      letter-spacing: -1px;
      line-height: 29px;
    }

    h4 {
      font-size: 18px;
      font-weight: 500;
    }
  }

  $contact-us-gutter: 30px;

  .next-steps-col {
    margin-top: -9.5 * $vertical-height;

    @include make-col(5);

    @include media-breakpoint-down(md) {
      display: none;
      @include make-col(12);

      min-height: auto;
    }

    @include media-breakpoint-up(xl) {
      @include make-col(4);

      @include make-col-offset(1);
    }

    .next-steps-wrap {
      position: -webkit-sticky;
      position: sticky;
      top: 0;
      padding: 0;
      background: $gray-darker;
      border: 3px solid black;
      border-radius: $border-radius;
      background-color: white;
      max-width: 270px;

      main {
        padding: (1.5 * $vertical-height) $contact-us-gutter;
      }
    }

    header {
      background-color: $gray-darkest;
      color: white;
      text-align: center;
      line-height: 1;
      padding: 20px 15px 25px 15px;
    }

    .btn {
      width: 100%;
      margin-top: 2 * $vertical-height;
      font-size: 12px;
    }
  }

  .trusted-by-next-steps {
    margin: (2 * $vertical-height) -15px 0;
    background: white;

    h3 {
      padding: (2 * $vertical-height) (0.5 * $vertical-height) 0;
    }

    ul {
      @include list-unstyled;

      display: flex;
      flex-wrap: wrap;
    }

    li {
      flex: 0 0 33%;

      &.partner-logo-rectangle {
        flex: 0 0 66%;
      }

      padding: 0 (0.5 * $vertical-height) (2 * $vertical-height);

      img {
        display: block;
        width: 100%;
        height: auto;
      }
    }

    .hidden-on-trusted-by-next-steps {
      display: none;
    }
  }

  .landing-lightspeed-logo {
    max-width: 280px;
    margin: (2 * $vertical-height) 0 (-1 * $vertical-height) 0;
    display: block;
  }
}

.signup-landing-page {
  .mobile-contact-link {
    margin: (2 * $vertical-height) 0 (4 * $vertical-height);

    a {
      display: block;
      width: 20em;
      max-width: 100%;
      margin: 0 auto;
    }

    @include media-breakpoint-up(lg) {
      display: none;
    }
  }
}

.chevron {
  font-size: 140%;
  font-weight: bold;
  line-height: 0;
}

